--- a/src/Components/Navigation-Button/style.css
+++ b/src/Components/Navigation-Button/style.css
@@ -1,3 +1,8 @@
 .navigation-button {
-    
+    width: 140px;
+    height: 140px;
+    /* outline-style:initial; */
+    border-radius: 80px;
+    border-color: #000000;
+    cursor: pointer; 
 }
