--- a/src/Components/Navigation-Button/style.css
+++ b/src/Components/Navigation-Button/style.css
@@ -1,8 +1,11 @@
 .navigation-button {
-    width: 140px;
-    height: 140px;
-    /* outline-style:initial; */
+    font-size: 1.4rem;
+    font-weight: 900;
+    width: 155px;
+    height: 155px;
     border-radius: 80px;
     border-color: #000000;
     cursor: pointer; 
+    transition: .6s;
 }
+
