--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -1,18 +1,25 @@
 footer {
-    padding-top: 5%;
-    margin-bottom: 4%;
+  padding-top: 5%;
+  margin-bottom: 4%;
 }
 
-div.row{
-    height: 100%;
-    
+div.row {
+  height: 100%;
 }
 
 .footer-col col {
-    text-align: center;
+  text-align: center;
 }
 
 .footer-col h3 {
-    font-size: 1.4rem;
-    font-weight: 900;
+  font-size: 1.4rem;
+  font-weight: 900;
+}
+
+.footer-col:nth-child(3) {
+  flex-direction: column;
+}
+
+.footer-icons {
+  flex-direction: row !important;
 }
