--- a/src/Components/Navigation-Button/style.css
+++ b/src/Components/Navigation-Button/style.css
@@ -1,11 +1,10 @@
 .navigation-button {
-    font-size: 1.4rem;
-    font-weight: 900;
-    width: 155px;
-    height: 155px;
-    border-radius: 80px;
-    border-color: #000000;
-    cursor: pointer; 
-    transition: .6s;
+  font-size: 1.4rem;
+  font-weight: 900;
+  border-radius: 60%;
+  border-color: #000000;
+  cursor: pointer;
+  transition: 0.6s;
+  margin-right: 6%;
+  flex: 2em;
 }
-
