--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 body {
   background-color: #f3f3f3 !important;
   font-family: 'work Sans' !important;
+  overflow-x: hidden !important;
   font-size: 16px;
 }
+
 
