--- a/src/Components/Contact/style.css
+++ b/src/Components/Contact/style.css
@@ -12,7 +12,7 @@ div.contact-row.row {
 }
 
 .contact-text {
-  width: 50%;
+  width: 60%;
   margin-bottom: 5%;
 }
 
@@ -22,11 +22,24 @@ div.contact-row.row {
   align-items: center;
 }
 
+input.form-control {
+  background-color: #f3f3f3;
+  border-color: #323030;
+}
+
+input.form-control:hover {
+  border-color: #000 !important;
+}
+
+textarea {
+  background-color: #f3f3f3;
+}
+
 input[type="submit"] {
   font-size: 1.4rem;
   font-weight: 900;
   border-radius: 60%;
-  border-color: #000000;
+  border-color: #323030;
   cursor: pointer;
   transition: 0.6s;
   margin-right: 6%;
