--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -22,7 +22,7 @@ div.footer-col {
 }
 
 .footer-col p {
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 /* for screens smaller than 500px  */
@@ -33,8 +33,5 @@ div.footer-col {
 
   div.footer-container {
     padding-top: 7%;
+  }
 }
-
-}
-
-
