--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+html{
+  overflow-x: hidden !important;
+}
+
 body {
   background-color: #f3f3f3 !important;
   font-family: 'work Sans' !important;
-  overflow-x: hidden !important;
   font-size: 16px;
 }
 
