--- a/src/Components/Navigation-Button/style.css
+++ b/src/Components/Navigation-Button/style.css
@@ -8,6 +8,7 @@
   border-color: #000000;
   cursor: pointer;
   transition: 0.6s;
-  margin-right: 4%;
+  margin-right: 0;
+  padding: 0;
   /* flex: 2em; */
 }
