--- a/src/Components/Navigation-Button/style.css
+++ b/src/Components/Navigation-Button/style.css
@@ -1,14 +1,14 @@
 .navigation-button {
-  font-size: 1.4em;
-  height:100%;
-  width:auto;
+  /* font-size: 1.2em; */
+  height: 74px;
+  width: 83px;
   display:inline-block;
   font-weight: 900;
   border-radius: 60%;
   border-color: #000000;
   cursor: pointer;
   transition: 0.6s;
-  margin-right: 0;
+  margin-right: 2%;
   padding: 0;
   /* flex: 2em; */
 }
