--- a/src/Components/Navigation-Button/style.css
+++ b/src/Components/Navigation-Button/style.css
@@ -1,8 +1,7 @@
+
 .navigation-button {
-  /* font-size: 1.2em; */
-  height: 74px;
-  width: 83px;
-  display:inline-block;
+  font-size: 1.4em;
+  display: inline-block;
   font-weight: 900;
   border-radius: 60%;
   border-color: #000000;
@@ -10,5 +9,22 @@
   transition: 0.6s;
   margin-right: 2%;
   padding: 0;
-  /* flex: 2em; */
+  flex: 1.8em;
+}
+/* for screens smaller than 500px  */
+@media only screen and (max-width: 500px) {
+  .navigation-button {
+    font-size: 1.2em;
+    height: 90px;
+    width: 100px;
+    display:inline-block;
+    font-weight: 900;
+    border-radius: 60%;
+    border-color: #000000;
+    cursor: pointer;
+    transition: 0.6s;
+    margin-right: 2%;
+    padding: 0;
+    /* flex: 2em; */
+  }
 }
